Fix backer avatar overflow

--- a/www/src/js/views/contribute/ContributeContainer/ContributeContainer.scss
+++ b/www/src/js/views/contribute/ContributeContainer/ContributeContainer.scss
@@ -60,6 +60,15 @@
   }
 }
 
+.backerAvatars {
+  margin-bottom: 1.5rem;
+  overflow: auto;
+
+  img {
+    display: block;
+  }
+}
+
 .githubLinks,
 .contributeLinks {
   display: grid;
